# reddit-research-engine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
backend/src/: main.rs
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.css  Navbar.jsx
src/: cli.rs  config.rs  errors.rs  main.rs  models.rs  output.rs
src/export/: mod.rs  sheets.rs
src/services/: gemini.rs  mod.rs  reddit.rs
src/utils/: validation.rs
