[package]
name = "reddit-research-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
google-sheets4 = "5.0.3"
yup-oauth2 = "9"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.25"
chrono = "0.4"
